@@ -9,7 +9,7 @@
  <object name="portlet_actions_user" meta_type="CPS Portlet"
     portal_type="Actions Portlet"/>
  <object name="portlet_actions_user2" meta_type="CPS Portlet"
-    portal_type="Actions Portlet"/>
+    portal_type="Custom Portlet"/>
  <object name="portlet_breadcrumbs" meta_type="CPS Portlet"
     portal_type="Breadcrumbs Portlet"/>
  <object name="portlet_breadcrumbs2" meta_type="CPS Portlet"
