@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
 <object name="portlet_actions_user2" meta_type="CPS Portlet"
-   portal_type="Actions Portlet">
+   portal_type="Custom Portlet">
  <f id="Contributors">
   <e v="CPS Manager Manager"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060125135521Z"/>
+ <f id="CreationDate" v="20060222160914Z"/>
  <f id="Creator" v="manager"/>
- <f id="Description" v=""/>
+ <f id="Description"
+    v="Displays user full name and actions according with this categories: user, globals."/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20060125135749Z"/>
+ <f id="ModificationDate" v="20060222160937Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
@@ -22,19 +23,18 @@
  <f id="cache_cleanup_date" v="0.0"/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
- <f id="categories">
-  <e v="user"/>
-  <e v="global"/>
+ <f id="custom_cache_params">
+  <e v="no-cache"/>
  </f>
  <f id="disable_override" v="0"/>
- <f id="dummy" v=""/>
  <f id="identifier" v="portlet_actions_user2"/>
  <f id="javascript" v=""/>
+ <f id="js_render_method" v=""/>
  <f id="order" v="0"/>
  <f id="portlet" v=""/>
  <f id="preview"/>
  <f id="provider" v=""/>
- <f id="show_icons" v="False"/>
+ <f id="render_method" v="portlet_username_actions"/>
  <f id="slot" v="user_actions"/>
  <f id="slot_override" v="0"/>
  <f id="visibility_range" v="0-0"/>
