@@ -7,7 +7,7 @@
  <property name="display_title_in_text_mode">False</property>
  <property name="xpos">2</property>
  <property name="align">right</property>
- <property name="padding"></property>
+ <property name="padding">0px 5px 0px 0px</property>
  <property name="margin">8px 10px 0px 0px</property>
  <property name="templet_height"></property>
  <property name="fontcolor">defaultfontcolors</property>
