@@ -8,7 +8,7 @@
  <property name="xpos">2</property>
  <property name="align">right</property>
  <property name="padding">0px</property>
- <property name="margin">20px 10px 0px 0px</property>
+ <property name="margin">20px 5px 0px 0px</property>
  <property name="templet_height"></property>
  <property name="fontcolor">defaultfontcolors</property>
  <property name="fontshape">average</property>
@@ -23,7 +23,7 @@
  <property name="boxcolor"></property>
  <property name="boxcorners"></property>
  <property name="portaltabstyle">TabStyle</property>
- <property name="boxlayout">horizontal_menu</property>
+ <property name="boxlayout">horizontal_box_notitle</property>
  <property name="box_group">portal_tabs</property>
  <property name="macroless">False</property>
  <property name="box_title_i18n">False</property>
