@@ -2,7 +2,7 @@
 <object name="portal_tab_style_useractions" meta_type="Portal Tab Style">
  <property name="title">PortalTabStyleuseractions</property>
  <property name="default">False</property>
- <property name="HorizontalMargin">10px</property>
+ <property name="HorizontalMargin">5px</property>
  <property name="VerticalPadding">1px</property>
  <property name="HorizontalPadding">1px</property>
  <property name="Tab_width"></property>
