@@ -14,3 +14,4 @@ New internal features:
 - Remove the option to send the password by email for joining users as it's 
   useless
 - #1319: disabled "private space" action
+- #1390: Add user name to user_actions portlet.
